--- a/tournament-portal/src/app/app.component.html
+++ b/tournament-portal/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container">
 <!--  <h1>Welcome to My App</h1>-->
   <app-navbar></app-navbar>
+  <app-tournaments *ngIf="showTournaments"></app-tournaments>
   <router-outlet></router-outlet>
 </div>
