--- a/tournament-portal/src/app/navbar/navbar.component.html
+++ b/tournament-portal/src/app/navbar/navbar.component.html
@@ -1,27 +1,28 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" [ngClass]="'my-navbar'">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">My App</a>
+    <a class="navbar-brand" href="#">Home</a>
     <button class="navbar-toggler" type="button" (click)="toggleNav()" [class.collapsed]="isCollapsed">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div [ngClass]="{'collapse': isCollapsed, 'navbar-collapse': true}">
       <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <li class="nav-item" *ngIf="!userService.isLoggedIn()">
+          <a class="nav-link" [routerLink]="['/login']">Log in</a>
+        </li>
+        <li class="nav-item" *ngIf="!userService.isLoggedIn()">
+          <a class="nav-link" [routerLink]="['/registration']">Register</a>
+        </li>
+        <li class="nav-item" *ngIf="userService.isLoggedIn()">
+          <a class="nav-link" (click)="userService.logout()">Log out</a>
+        </li>
+        <li class="nav-item" *ngIf="userService.isLoggedIn()">
+          <a class="nav-link" [routerLink]="['/tournament-creation']">Organize Tournament</a>
         </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
-      <ul class="navbar-nav" *ngIf="!isCollapsed">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Log in</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/registration']">Register</a>
-        </li>
-      </ul>
     </div>
   </div>
 </nav>
