--- a/tournament-portal/src/app/forget-password/forget-password.component.html
+++ b/tournament-portal/src/app/forget-password/forget-password.component.html
@@ -16,5 +16,5 @@
   <div *ngIf="errorMessage" class="alert alert-danger" role="alert">
     {{ errorMessage }}
   </div>
-  <app-reset-password *ngIf="emailSent" [email]="forgotPasswordForm.get('email')?.value"></app-reset-password>
+  <app-reset-password *ngIf="emailSent" [email]="forgotPasswordForm.get('email').value"></app-reset-password>
 </div>
