--- a/tournament-portal/src/app/navbar/navbar.component.html
+++ b/tournament-portal/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link" [routerLink]="['/registration']">Register</a>
         </li>
         <li class="nav-item" *ngIf="userService.isLoggedIn()">
-          <a class="nav-link" (click)="userService.logout()">Log out</a>
+          <a class="nav-link" (click)="logout()">Log out</a>
         </li>
         <li class="nav-item" *ngIf="userService.isLoggedIn()">
           <a class="nav-link" [routerLink]="['/tournament-creation']">Organize Tournament</a>
