add styles for visualization tournament bracket

--- a/tournament-portal/src/styles.scss
+++ b/tournament-portal/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "adn-tournament/adn-styles";
+
 :root {
   --bg-color: #333;
   --text-color: #fff;
