fix displaying duel result

--- a/tournament-portal/src/app/tournaments/tournament-detail/ladder/bracket/bracket.component.html
+++ b/tournament-portal/src/app/tournaments/tournament-detail/ladder/bracket/bracket.component.html
@@ -1,11 +1,11 @@
 <div class="ngtt__match-wrapper">
-  <div class="ngtt__team-wrapper" *ngFor="let team of match?.players">
+  <div class="ngtt__team-wrapper" *ngFor="let team of match?.players; let i = index">
     <div [class.adn__team-avatar_bg]="!team?.img">
       <img *ngIf="team?.img" class="adn__team-avatar" src="{{ team?.img }}" />
     </div>
     <span class="adn__team-title" (click)="handleClick(team?.email)">{{
       team?.email
       }}</span>
-    <div class="ngtt__team-score">{{ 0 }}</div>
+    <div class="ngtt__team-score">{{ match.result === i ? 1 : 0 }}</div>
   </div>
 </div>
