--- a/tournament-portal/src/app/tournaments/tournaments.component.html
+++ b/tournament-portal/src/app/tournaments/tournaments.component.html
@@ -1,21 +1,28 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-12" mx-auto>
+    <div class="col-sm-12">
       <h1>Tournaments</h1>
       <hr>
-      <app-tournament *ngFor="let tournament of tournaments"
-                      [tournament] = "tournament"></app-tournament>
+      <app-tournament *ngFor="let tournament of tournamentsToShow || []"
+                      [tournament]="tournament">
+      </app-tournament>
       <hr>
       <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
-          <li class="page-item disabled">
-            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+          <li class="page-item" [class.disabled]="currentPage == 1">
+            <a class="page-link" href="#" tabindex="-1"
+               [attr.aria-disabled]="currentPage === 1"
+               (click)="prevPage()">Previous</a>
           </li>
-          <li class="page-item active"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#">Next</a>
+          <li class="page-item" *ngFor="let page of pages"
+              [class.active]="currentPage == page">
+            <a class="page-link" href="#"
+               (click)="setPage(page)">{{page}}</a>
+          </li>
+          <li class="page-item" [class.disabled]="currentPage == totalPages">
+            <a class="page-link" href="#"
+               [attr.aria-disabled]="currentPage === totalPages"
+               (click)="nextPage()">Next</a>
           </li>
         </ul>
       </nav>
