--- a/tournament-portal/src/app/registration/registration.component.html
+++ b/tournament-portal/src/app/registration/registration.component.html
@@ -39,12 +39,23 @@
         Passwords do not match.
       </div>
     </div>
-    <button type="submit" class="btn btn-primary">Register</button>
+    <div class="mt-4 d-flex justify-content-center">
+      <button *ngIf="!registrationSuccessful" type="submit" [disabled]="!registrationForm.valid" class="btn btn-primary">Register</button>
+    </div>
+
   </form>
   <div *ngIf="registrationSuccessful" class="alert alert-success mt-3">
-    Registration successful!
+    <div class="d-flex justify-content-center fw-bold">
+      registration successful!
+    </div>
+    <div class="d-flex justify-content-center fw-bold">
+      verification email has been sent on your email address
+    </div>
+    <div class="mt-4 d-flex justify-content-center">
+      <a [routerLink]="['/login']" class="btn btn-primary">go to login page</a>
+    </div>
   </div>
   <div *ngIf="registrationFailed" class="alert alert-danger mt-3">
-    Registration failed. Please try again.
+    Registration failed. Please try again later.
   </div>
 </div>
