feature: add successful message after tournament creation

--- a/tournament-portal/src/app/tournaments/tournament-creation/tournament-creation.component.html
+++ b/tournament-portal/src/app/tournaments/tournament-creation/tournament-creation.component.html
@@ -108,3 +108,8 @@
 <!--  </div>-->
 <!--</div>-->
 <app-tournament *ngIf="tournamentCreated" [tournament]="createdTournament"></app-tournament>
+<div *ngIf="tournamentCreated" class="alert alert-success mt-3">
+  <div class="d-flex justify-content-center fw-bold">
+    tournament created successfully!
+  </div>
+</div>
